Fix link bleeding in description

--- a/src/styles/h5p-agamotto.scss
+++ b/src/styles/h5p-agamotto.scss
@@ -203,6 +203,7 @@ $border-color_1: #999 transparent transparent transparent;
   .h5p-agamotto-description-bottom {
 		position: absolute;
 		width: 100%;
+		height: inherit;
 	}
 
   .h5p-agamotto-visually-hidden {
